test/compile-errors/mutate-parameter.crow
f void(a nat)
	a := 3
